--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:tailwind": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/index.css",
     "build": "npm run build:tailwind && rollup -c",
     "start": "sirv public",
-    "serve": "serve public -p 80",
+    "serve": "serve public",
     "dev": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\""
   },
   "devDependencies": {
